[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui_hf_model_downloader"
version = "1.0.0" 
description = "A simple custom node to download models from Hugging Face URLs directly into your ComfyUI model folders."
authors = [
  {name = "Junwan Kim", email = "junwan8692@gmail.com"}
]
readme = "README.md"
license = { file = "LICENSE" } 
requires-python = ">=3.10"
dependencies = [] 

[project.urls]
Repository = "https://github.com/Junwan8692/comfyui_hf_model_downloader.git"

[tool.comfy]
PublisherId = "junwan8692"

DisplayName = "HF Model Downloader"

Icon = ""